gateway/httpbin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  labels:
    app: httpbin
spec:
  selector:
    app: httpbin
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
