gateway/order-kong-route.yaml
# Kong ingress route setup. for order -microservice
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-kong
  namespace: default
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /order(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: order
                port:
                  number: 80
